updated to work with the VS Code extension

--- a/.github/workflows/fab-inspector.yml
+++ b/.github/workflows/fab-inspector.yml
@@ -21,9 +21,9 @@ jobs:
           docker pull ghcr.io/natvang/fab-inspector:latest
           docker run --rm \
             -v "${{ github.workspace }}/src:/src" \
-            -v "${{ github.workspace }}/rules:/rules" \
+            -v "${{ github.workspace }}/fab-inspector-rules:/rules" \
             ghcr.io/natvang/fab-inspector:latest \
-            -fabricitem /src -rules /rules/Base-rules.json -formats GitHub
+            -fabricitem /src -rules /rules/sample-report-rules.json -formats GitHub
 
 
      
